--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,10 @@
 
     <EditText
         android:id="@+id/Power"
-        android:layout_width="212dp"
-        android:layout_height="36dp"
+        android:layout_width="211dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="229dp"
         android:background="@android:color/transparent"
         android:clickable="false"
         android:ems="10"
@@ -29,19 +31,47 @@
         android:text="Humidifier Power"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="229dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="210dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="308dp"
+        android:background="@android:color/transparent"
+        android:clickable="false"
+        android:ems="10"
+        android:fontFamily="sans-serif-black"
+        android:inputType="text"
+        android:text="Humidity"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/Power"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Switch
-        android:id="@+id/switch2"
+        android:id="@+id/onswitch"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="261dp"
+        android:layout_marginTop="229dp"
+        android:checked="true"
         android:fontFamily="sans-serif-black"
-        android:layout_width="152dp"
-        android:layout_height="46dp"
-        android:text="On/Off"
-        android:textSize="20sp"
+        android:text="Off/On"
+        android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="243dp"
-        tools:layout_editor_absoluteY="222dp"
-        tools:layout_editorbsoluteY="217dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+       />
+
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="127dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="308dp"
+        app:layout_constraintStart_toEndOf="@+id/editText"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
