Testing some code for sending request
It works!!! Ok, so i made an AsyncTask class that is needed for all network communications in API ice cream sandwich and up, in conjunction with a https protocol or any protocol but it has to be secure. 

To Do: 
-Try with socket communications
      -socket.io 
      -okHttp.socket
-Start thinking about how to do the flow of information

sources:
https://www.tutorialspoint.com/android-asynctask-example-and-explanation

https://developer.android.com/training/volley/simple

--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/Power"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="" />
 
     <Switch
         android:id="@+id/onswitch"
