--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,13 @@
     tools:context=".MainActivity">
 
     <ImageView
+
         android:id="@+id/imageView"
         android:layout_width="255dp"
         android:layout_height="172dp"
+        android:layout_marginStart="78dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="78dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +24,7 @@
         android:layout_width="211dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="229dp"
+        android:layout_marginTop="60dp"
         android:background="@android:color/transparent"
         android:clickable="false"
         android:ems="10"
@@ -32,13 +35,15 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="210dp"
         android:layout_height="47dp"
-        android:layout_marginTop="308dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
+        android:autofillHints=""
         android:background="@android:color/transparent"
         android:clickable="false"
         android:ems="10"
@@ -47,32 +52,31 @@
         android:text="Humidity"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/Power"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Power" />
 
     <Switch
         android:id="@+id/onswitch"
         android:layout_width="140dp"
         android:layout_height="47dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="229dp"
+        android:layout_marginTop="64dp"
         android:checked="true"
         android:fontFamily="sans-serif-black"
         android:text="Off/On"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-       />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintStart_toEndOf="@+id/Power"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Spinner
         android:id="@+id/spinner1"
         android:layout_width="127dp"
         android:layout_height="39dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="308dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toEndOf="@+id/editText"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/onswitch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
