Fixed constraints, changed font to black, arranged objects on screen for better fit, added text boxes for actual humidity and actual water level

--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,10 @@
     <ImageView
 
         android:id="@+id/imageView"
-        android:layout_width="255dp"
-        android:layout_height="172dp"
+        android:layout_width="229dp"
+        android:layout_height="136dp"
         android:layout_marginStart="78dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="78dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,16 +20,17 @@
         app:srcCompat="@drawable/humidifierlogo" />
 
     <TextView
-        android:id="@+id/actual"
+        android:id="@+id/humidity"
         android:layout_width="225dp"
         android:layout_height="47dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:background="@android:color/transparent"
         android:clickable="false"
         android:ems="10"
         android:fontFamily="sans-serif-black"
         android:text="Humidity"
+        android:textColor="@color/colorblack"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +40,7 @@
         android:id="@+id/onswitch"
         android:layout_width="140dp"
         android:layout_height="47dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="12dp"
         android:checked="true"
         android:fontFamily="sans-serif-black"
@@ -53,45 +54,81 @@
         android:id="@+id/spinner1"
         android:layout_width="140dp"
         android:layout_height="47dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/onswitch" />
+        app:layout_constraintTop_toBottomOf="@+id/onswitch"
+        
+    />
 
     <TextView
-        android:id="@+id/actual"
+        android:id="@+id/actual_humidity"
         android:layout_width="225dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="232dp"
+        android:layout_marginTop="188dp"
         android:fontFamily="sans-serif-black"
         android:text="Actual Humidity"
-
+        android:textColor="@color/colorblack"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/power"
         android:layout_width="225dp"
         android:layout_height="47dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-black"
         android:text="Humidifier Power"
+        android:textColor="@color/colorblack"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
 
     <TextView
-        android:id="@+id/water"
+        android:id="@+id/water_level"
         android:layout_width="225dp"
         android:layout_height="47dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="268dp"
         android:fontFamily="sans-serif-black"
         android:text="Water Level"
+        android:textColor="@color/colorblack"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="553dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <EditText
+        android:id="@+id/humidity_value"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="188dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
+        android:ems="10"
+        android:fontFamily="sans-serif-black"
+        android:inputType="number"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <EditText
+        android:id="@+id/water_level_value"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
+        android:ems="10"
+        android:fontFamily="sans-serif-black"
+        android:inputType="number"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
