Added bottom navigation bar, added functionality to Home and Schedule button in that bar, fixed text boxes

--- a/HumdifierApp/app/src/main/res/values/colors.xml
+++ b/HumdifierApp/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorblack">#000000</color>
-
+    <color name="Purple">#877DA2</color>
+    <color name="Bluepurple">#F0333366</color>
 </resources>
