--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00131313"
     tools:context=".MainActivity">
+
 
     <ImageView
 
@@ -41,7 +44,7 @@
         android:layout_width="140dp"
         android:layout_height="47dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="16dp"
         android:checked="true"
         android:fontFamily="sans-serif-black"
         android:text="Off/On"
@@ -59,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/onswitch"
 
-    />
+        />
 
     <TextView
         android:id="@+id/actual_humidity"
@@ -102,40 +105,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <EditText
-        android:id="@+id/humidity_value"
-        android:layout_width="140dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="16dp"
-        android:background="@android:color/transparent"
-        android:ems="10"
-        android:fontFamily="sans-serif-black"
-        android:inputType="number"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <EditText
-        android:id="@+id/water_level_value"
-        android:layout_width="140dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="268dp"
-        android:layout_marginEnd="16dp"
-        android:background="@android:color/transparent"
-        android:ems="10"
-        android:fontFamily="sans-serif-black"
-        android:inputType="number"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
+    <!--<Button
         android:id="@+id/schedButton"
         android:layout_width="234dp"
         android:layout_height="54dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="176dp"
         android:fontFamily="sans-serif-black"
         android:text="Go to Schedule"
         android:textSize="24sp"
@@ -144,4 +120,52 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
+        android:layout_width="431dp"
+        android:layout_height="266dp"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">-->
+
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:visibility="visible"
+        app:itemBackground="@color/Bluepurple"
+        app:itemHorizontalTranslationEnabled="false"
+        app:itemIconTint="@android:color/black"
+        app:itemTextColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="188dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
