--- a/HumdifierApp/app/src/main/res/layout/activity_main2.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main2.xml
@@ -6,16 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="274dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="44dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Back to Main"
-        android:textSize="24sp"
-        android:textStyle="bold"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:visibility="visible"
+        app:itemBackground="@color/Bluepurple"
+        app:itemHorizontalTranslationEnabled="false"
+        app:itemIconTint="@android:color/black"
+        app:itemTextColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        tools:visibility="visible" />
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
