--- a/HumdifierApp/app/src/main/res/layout/activity_main2.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main2.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
+    <TimePicker
+        android:id="@+id/time_picker2"
+        android:layout_width="169dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="224dp"
+        android:timePickerMode="spinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -23,6 +33,174 @@
         tools:visibility="visible" />
 
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="197dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="8dp"
+        android:text="SCHEDULE"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/Bluepurple"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/tM"
+        style="@style/toggleButton"
+        android:layout_width="58dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="300dp"
+        android:background="@drawable/toggle_bg"
+        android:textOff="M"
+        android:textOn="M"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintStart_toEndOf="@+id/tSu"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/tW"
+        style="@style/toggleButton"
+        android:layout_width="58dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="188dp"
+        android:background="@drawable/toggle_bg"
+        android:textOff="W"
+        android:textOn="W"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tT"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/tTh"
+        style="@style/toggleButton"
+        android:layout_width="57dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="132dp"
+        android:background="@drawable/toggle_bg"
+        android:textOff="Th"
+        android:textOn="Th"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintStart_toEndOf="@+id/tW"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/tSu"
+        style="@style/toggleButton"
+        android:layout_width="58dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="352dp"
+        android:background="@drawable/toggle_bg"
+        android:textOff="Su"
+        android:textOn="Su"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/tT"
+        style="@style/toggleButton"
+        android:layout_width="57dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="244dp"
+        android:background="@drawable/toggle_bg"
+        android:textOff="T"
+        android:textOn="T"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tM"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/tF"
+        style="@style/toggleButton"
+        android:layout_width="58dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="76dp"
+        android:background="@drawable/toggle_bg"
+        android:textOff="F"
+        android:textOn="F"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tTh"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/tS"
+        style="@style/toggleButton"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/toggle_bg"
+        android:textOff="S"
+        android:textOn="S"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/tF"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TimePicker
+        android:id="@+id/time_picker"
+        android:layout_width="169dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginEnd="224dp"
+        android:timePickerMode="spinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="201dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="204dp"
+        android:text="START TIME"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/Bluepurple"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="201dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="252dp"
+        android:layout_marginEnd="204dp"
+        android:text="END TIME"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/Bluepurple"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
