--- a/HumdifierApp/app/src/main/res/values/styles.xml
+++ b/HumdifierApp/app/src/main/res/values/styles.xml
@@ -19,5 +19,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Widget.Button.Toggle" parent="android:Widget">
+        <item name="android:background">@drawable/toggle_bg</item>
+    </style>
 
+    <style name="toggleButton" >
+        <item name="android:buttonStyleToggle">@style/Widget.Button.Toggle</item>
+        <item name="android:textColor">@drawable/toggle_text_color</item>
+    </style>
 </resources>
