Added buttons for schedule page; worked on chart activity

--- a/HumdifierApp/app/src/main/res/layout/activity_chart.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_chart.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ChartActivity">
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    android:layout_width = "match_parent"
+    android:layout_height = "match_parent"
+    tools:context = ".MainActivity">
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/BarChart"
+        android:layout_width="380dp"
+        android:layout_height="536dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
