--- a/HumdifierApp/app/src/main/res/layout/activity_user_schedule.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_user_schedule.xml
@@ -11,23 +11,47 @@
         android:id="@+id/edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/Bluepurple"
         android:text="Edit"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/delete"
-        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintHorizontal_bias="0.711"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="35dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
-        android:text="Button"
+        android:backgroundTint="@color/Bluepurple"
+        android:text="Delete"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="35dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/userlist"
-        android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"></ListView>
+        android:layout_width="377dp"
+        android:layout_height="563dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.404"></ListView>
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="52dp"
+        android:backgroundTint="@color/Bluepurple"
+        android:textStyle="bold"
+        android:text="BACK TO MAIN SCHEDULE"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
