--- a/HumdifierApp/app/src/main/res/layout/activity_main2.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main2.xml
@@ -34,8 +34,8 @@
         android:visibility="visible"
         app:itemBackground="@color/Bluepurple"
         app:itemHorizontalTranslationEnabled="false"
-        app:itemIconTint="@android:color/black"
-        app:itemTextColor="@android:color/black"
+        app:itemIconTint="@android:color/white"
+        app:itemTextColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -222,6 +222,7 @@
         android:backgroundTint="@color/Bluepurple"
         android:text="SAVE SCHEDULE"
         android:textStyle="bold"
+        android:textColor="@color/bpWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -234,6 +235,7 @@
         android:backgroundTint="@color/Bluepurple"
         android:text="VIEW SCHEDULE"
         android:textStyle="bold"
+        android:textColor="@color/bpWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
