--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
         android:layout_height="47dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/onswitch"
 
