--- a/HumdifierApp/app/src/main/res/values/colors.xml
+++ b/HumdifierApp/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#F0333366</color>-->
+    <color name="colorPrimaryDark">#F0333366</color>-->
+    <color name="colorAccent">#F0333366</color>-->
     <color name="colorblack">#000000</color>
     <color name="Purple">#877DA2</color>
     <color name="Bluepurple">#F0333366</color>
