--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:clickable="false"
         android:ems="10"
         android:fontFamily="sans-serif-black"
-        android:text="Humidity"
+        android:text="Set Humidity"
         android:textColor="@color/colorblack"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -146,7 +146,7 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/actualHumidityTextView"
         android:layout_width="140dp"
         android:layout_height="47dp"
         android:layout_marginTop="188dp"
@@ -155,7 +155,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/waterLevelTextView"
         android:layout_width="140dp"
         android:layout_height="47dp"
         android:layout_marginTop="268dp"
