changed color of toggles for days of week

--- a/HumdifierApp/app/src/main/res/layout/activity_chart.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_chart.xml
@@ -27,14 +27,14 @@
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graph"
-        android:layout_width="408dp"
-        android:layout_height="588dp"
+        android:layout_width="377dp"
+        android:layout_height="472dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="132dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.121" />
-
+        app:layout_constraintVertical_bias="0.33" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
