--- a/HumdifierApp/app/src/main/res/drawable/shape_oval.xml
+++ b/HumdifierApp/app/src/main/res/drawable/shape_oval.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/Bluepurple" />
+    <solid android:color="@color/Purple" />
     <size
         android:width="20dp"
         android:height="20dp" />
