need to fix UI update for non network events.

--- a/HumdifierApp/app/src/main/res/layout/activity_user_schedule.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_user_schedule.xml
@@ -35,19 +35,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/schedule"
-        android:layout_width="380dp"
-        android:layout_height="530dp"
-        android:clickable="false"
-        android:editable="false"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -63,4 +50,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
         tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/schedule"
+        android:layout_width="389dp"
+        android:layout_height="508dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.776" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
