--- a/HumdifierApp/app/src/main/res/layout/activity_user_schedule.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_user_schedule.xml
@@ -17,6 +17,9 @@
         android:text="refresh"
         android:textColor="@color/bpWhite"
         android:textStyle="bold"
+        android:textColor="@color/bpWhite"
+        app:layout_constraintEnd_toStartOf="@+id/delete"
+        app:layout_constraintHorizontal_bias="0.711"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,7 +43,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="28dp"
         android:backgroundTint="@color/Bluepurple"
-        android:text="delete all"
+        android:text="Delete"
         android:textColor="@color/bpWhite"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,4 +76,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.776" />
 
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="52dp"
+        android:backgroundTint="@color/Bluepurple"
+        android:textStyle="bold"
+        android:textColor="@color/bpWhite"
+        android:text="BACK TO MAIN SCHEDULE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
