--- a/HumdifierApp/app/src/main/res/values/colors.xml
+++ b/HumdifierApp/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorblack">#000000</color>
     <color name="Purple">#877DA2</color>
     <color name="Bluepurple">#F0333366</color>
+    <color name="white">#FFFFFF</color>
 </resources>
