--- a/HumdifierApp/app/src/main/res/layout/activity_main.xml
+++ b/HumdifierApp/app/src/main/res/layout/activity_main.xml
@@ -143,7 +143,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
-        tools:visibility="visible" >
+        tools:visibility="visible">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
@@ -151,8 +151,10 @@
         android:id="@+id/actualHumidityTextView"
         android:layout_width="140dp"
         android:layout_height="47dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="196dp"
         android:layout_marginEnd="16dp"
+        android:textColor="@color/colorblack"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -160,19 +162,23 @@
         android:id="@+id/waterLevelTextView"
         android:layout_width="140dp"
         android:layout_height="47dp"
-        android:layout_marginTop="268dp"
+        android:layout_marginTop="276dp"
         android:layout_marginEnd="16dp"
+        android:textColor="@color/colorblack"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="59dp"
-        android:layout_height="91dp"
-        android:layout_marginEnd="176dp"
+        android:layout_width="168dp"
+        android:layout_height="59dp"
+        android:layout_marginEnd="212dp"
         android:layout_marginBottom="112dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.958"
         app:srcCompat="@drawable/logo" />
 
 
